--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "rimraf ./dist && cross-env NODE_ENV=development rollup --config --watch",
-    "build": "rimraf ./dist && cross-env NODE_ENV=production rollup --config"
+    "serve": "rimraf ./build && cross-env NODE_ENV=development rollup --config --watch",
+    "build": "rimraf ./build && cross-env NODE_ENV=production rollup --config",
+    "lite-server": "lite-server -c ./lite-server-config.json"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "eslint-plugin-flowtype": "^5.2.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-prettier": "^3.1.4",
+    "lite-server": "^2.5.4",
     "postcss": "^7.0.32",
     "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
@@ -36,6 +38,7 @@
     "rollup-plugin-uglify": "^6.0.4"
   },
   "dependencies": {
+    "nanoid": "^3.1.12",
     "tailwindcss": "^1.7.5"
   }
 }
