--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^3.1.6",
     "rollup-plugin-serve": "^1.0.3",
-    "rollup-plugin-uglify": "^6.0.4"
+    "rollup-plugin-terser": "^7.0.0"
   },
   "dependencies": {
     "hyperapp": "^2.0.8",
