--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "rimraf ./build && cross-env NODE_ENV=development rollup --config --watch",
     "build": "rimraf ./build && cross-env NODE_ENV=production rollup --config",
-    "lite-server": "lite-server -c ./lite-server-config.json"
+    "lite-server": "lite-server --baseDir='./build'",
+    "report": "npm run build && lite-server --baseDir='./report'"
   },
   "keywords": [
     "HyperApp",
@@ -37,7 +38,8 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^3.1.6",
     "rollup-plugin-serve": "^1.0.3",
-    "rollup-plugin-terser": "^7.0.0"
+    "rollup-plugin-terser": "^7.0.0",
+    "rollup-plugin-visualizer": "^4.1.0"
   },
   "dependencies": {
     "hyperapp": "^2.0.8",
