--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "rollup-plugin-visualizer": "^4.1.0"
   },
   "dependencies": {
+    "@hyperapp/html": "^1.2.3",
     "hyperapp": "^2.0.8",
     "nanoid": "^3.1.12",
     "tailwindcss": "^1.7.5"
